[project]
name = "testing-utils"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
license = "Apache-2.0"
dependencies = [
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "isort>=7.0.0",
    "mypy>=1.18.2",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.4",
]
examples = [
    "pydantic==2.12.5",
]

[tool.setuptools]
packages = ["testing_utils"]

[tool.setuptools.package-data]
"testing_utils" = ["py.typed"]

[tool.ruff.lint]
select = ["D", "RUF022"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"**/*_test.py" = ["ALL"]
"**/tests/**/*.py" = ["ALL"]
"**/examples/**/*.py" = ["ALL"]
